@@ -1,5 +1,11 @@
 import "util"
+import namespace "queue"
 
 var x = new List();
+var y = new LinkedList();
+y.add_last(3);
+y.add_last(4);
+
+println(util instanceof Module);
 
 util.memory_view(get_env());
